--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/dialogueBox.css" />
     <link rel="stylesheet" href="css/productDisplay.css" />
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
-
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="lib/axios.js"></script>
     <script src="javascript/productsLoad.js"></script>
     <script src="lib/handlebar.js"></script>
